--- a/styles/style.css
+++ b/styles/style.css
@@ -13,3 +13,19 @@ a:hover {
     text-decoration: underline;
     color: red;
 }
+
+.container {
+    width: 300px;
+    display: flex;
+    height: 300px;
+    align-items: center;
+    justify-content: center;
+    margin: 0 auto;
+}
+
+#my-image {
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    object-fit: cover;
+}
