--- a/styles/style.css
+++ b/styles/style.css
@@ -15,17 +15,26 @@ a:hover {
 }
 
 .container {
-    width: 300px;
     display: flex;
-    height: 300px;
+    justify-content: space-between;
     align-items: center;
-    justify-content: center;
-    margin: 0 auto;
+    padding: 20px;
+}
+
+.bio {
+    flex: 1;
+    margin-left: 30px;
+}
+
+.my-image {
+    flex-shrink: 0;
 }
 
 #my-image {
-    width: 200px;
     height: 200px;
+    width: 200px;
     border-radius: 50%;
     object-fit: cover;
+    max-width: 100%;
+    height: auto;
 }
