--- a/docs/styles/general_style.css
+++ b/docs/styles/general_style.css
@@ -13,3 +13,9 @@ a:hover {
     text-decoration: underline;
     color: red;
 }
+
+#code-snippet {
+    background-color: lightgray;
+    padding: 3px;
+    border-radius: 5px;
+}
